tests/snapshots/integration_test__log_data@86c8d3dacecaa4a1b4db3cb2bb235210.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel6.log:1"
expression: result
info: "type=SYSCALL msg=audit(1490995752.404:20614537): arch=c000003e syscall=44 success=yes exit=464 a0=9 a1=7f56476614b0 a2=1d0 a3=0 items=0 ppid=1240 pid=1287 auid=4294967295 uid=0 gid=0 euid=0 suid=0 fsuid=0 egid=0 sgid=0 fsgid=0 tty=(none) ses=4294967295 comm=\"charon\" exe=2F7573722F6C6962657865632F7374726F6E677377616E2F636861726F6E202864656C6574656429 key=(null)"
---
{
  "record_type": "SYSCALL",
  "timestamp": 1490995752404,
  "id": 20614537,
  "fields": {
    "a0": "9",
    "a1": "7f56476614b0",
    "a2": "1d0",
    "a3": "0",
    "arch": "c000003e",
    "auid": null,
    "comm": "charon",
    "egid": "root",
    "euid": "root",
    "exe": "/usr/libexec/strongswan/charon (deleted)",
    "exit": 464,
    "fsgid": "root",
    "fsuid": "root",
    "gid": "root",
    "items": "0",
    "key": null,
    "pid": "1287",
    "ppid": "1240",
    "ses": "4294967295",
    "sgid": "root",
    "success": true,
    "suid": "root",
    "syscall": "44",
    "tty": null,
    "uid": "root"
  }
}
