tests/snapshots/integration_test__log_data@86d0e02db09bb30cf1a88c06ae400db2.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/test3.log:8"
expression: result
info: "node=auditdtest.a1959.org type=PROCTITLE msg=audit(1451781471.394:194437): proctitle=737368643A206275726E205B707269765D"
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194437,
  "node": "auditdtest.a1959.org",
  "fields": {
    "proctitle": "sshd: burn [priv]"
  }
}
