tests/snapshots/integration_test__log_data@88679c6ceb3b9f518e97232f1431e4b0.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PATH msg=audit(1521758453.536:1428931): item=0 name=2F73686172652F67656E6572616C2F706174685F7265646163746564 inode=1442434 dev=fc:01 mode=042775 ouid=10067 ogid=7003 rdev=00:00 nametype=NORMAL"
---
{
  "record_type": "PATH",
  "timestamp": 1521758453536,
  "id": 1428931,
  "fields": {
    "dev": "fc:01",
    "inode": "1442434",
    "item": "0",
    "mode": {
      "attributes": [
        "setgid"
      ],
      "file_type": "directory",
      "group": [
        "r",
        "w",
        "x"
      ],
      "other": [
        "r",
        "x"
      ],
      "user": [
        "r",
        "w",
        "x"
      ]
    },
    "name": "/share/general/path_redacted",
    "nametype": "NORMAL",
    "ogid": 7003,
    "ouid": 10067,
    "rdev": "00:00"
  }
}
