tests/snapshots/integration_test__log_data@887bbe70b75377f17f8faa8bf3a243cd.snap
---
source: tests/integration_test.rs
expression: record
info: "type=EXECVE msg=audit(1481077231.371:479): argc=7 a0=\"auditctl\" a1=\"-a\" a2=\"exit,always\" a3=\"-F\" a4=\"arch=b32\" a5=\"-S\" a6=\"execve\""
---
{
  "record_type": "EXECVE",
  "timestamp": 1481077231371,
  "id": 479,
  "fields": {
    "a0": "auditctl",
    "a1": "-a",
    "a2": "exit,always",
    "a3": "-F",
    "a4": {
      "arch": "b32"
    },
    "a5": "-S",
    "a6": "execve",
    "argc": 7
  }
}
