tests/snapshots/integration_test__log_data@8b4c18688db08320d31e6cbd47fa3307.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-crypto-session.log:1"
expression: result
info: "type=CRYPTO_SESSION msg=audit(1724778544.061:594047): pid=21702 uid=0 auid=4294967295 ses=4294967295 msg='op=start direction=from-client cipher=chacha20-poly1305@openssh.com ksize=512 mac=<implicit> pfs=ecdh-sha2-nistp521 spid=21704 suid=74 rport=46984 laddr=10.10.10.10 lport=22  exe=\"/usr/sbin/sshd\" hostname=? addr=10.11.11.11 terminal=? res=success'"
---
{
  "record_type": "CRYPTO_SESSION",
  "timestamp": 1724778544061,
  "id": 594047,
  "fields": {
    "auid": null,
    "msg": {
      "addr": "10.11.11.11",
      "cipher": "chacha20-poly1305@openssh.com",
      "direction": "from-client",
      "exe": "/usr/sbin/sshd",
      "hostname": "?",
      "ksize": "512",
      "laddr": "10.10.10.10",
      "lport": "22",
      "mac": "<implicit>",
      "op": "start",
      "pfs": "ecdh-sha2-nistp521",
      "res": "success",
      "rport": "46984",
      "spid": "21704",
      "suid": 74,
      "terminal": "?"
    },
    "pid": "21702",
    "ses": "4294967295",
    "uid": "root"
  }
}
