tests/snapshots/integration_test__log_data@8f1a49d626f3e7b864472a91656e9e10.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-grp-mgmt.log:1"
expression: result
info: "type=GRP_MGMT msg=audit(1724970841.047:3517): pid=14406 uid=0 auid=4294967295 ses=4294967295 msg='op=add-shadow-group id=990 exe=\"/usr/sbin/groupadd\" hostname=? addr=? terminal=? res=success'\u001dUID=\"root\" AUID=\"unset\" ID=\"docker\""
---
{
  "record_type": "GRP_MGMT",
  "timestamp": 1724970841047,
  "id": 3517,
  "fields": {
    "auid": null,
    "msg": {
      "addr": null,
      "exe": "/usr/sbin/groupadd",
      "hostname": null,
      "id": 990,
      "op": "add-shadow-group",
      "res": "success",
      "terminal": null
    },
    "pid": "14406",
    "ses": "4294967295",
    "uid": "root"
  },
  "enrichment": {
    "AUID": "unset",
    "ID": "docker",
    "UID": "root"
  }
}
